--- a/views/index.html
+++ b/views/index.html
@@ -123,5 +123,5 @@
         referrerpolicy="no-referrer"
     ></script>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </html>
