--- a/views/people_counter.html
+++ b/views/people_counter.html
@@ -17,6 +17,15 @@
         "
     >
         <h1 align="center">Jumlah Orang</h1>
-        <h1 align="center">0</h1>
+        <h1 id="counter" align="center">0</h1>
     </body>
+
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
+        integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    ></script>
+
+    <script type="module" src="./js/counting.js"></script>
 </html>
