feat: remove username and only keep `full name`

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
                                 class="form-control"
                                 id="email"
                                 aria-describedby="emailHelp"
-                                placeholder="Username or Email Address"
+                                placeholder="Email Address"
                             />
                         </div>
                         <div class="form-group">
@@ -65,8 +65,8 @@
                             <input
                                 type="text"
                                 class="form-control"
-                                id="usernameRegister"
-                                placeholder="Username"
+                                id="fullnameRegister"
+                                placeholder="Full Name"
                             />
                         </div>
                         <div class="form-group">
