feat: fix `fullName` id

--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@
                             <input
                                 type="text"
                                 class="form-control"
-                                id="fullnameRegister"
+                                id="fullNameRegister"
                                 placeholder="Full Name"
                             />
                         </div>
