feat: add counts incremental

--- a/views/increase_people.html
+++ b/views/increase_people.html
@@ -18,6 +18,7 @@
     >
         <h1 align="center">TAMBAH ORANG</h1>
         <button
+            id="add-count-btn"
             style="
                 display: inline-block;
                 margin-top: 20px;
@@ -36,4 +37,13 @@
             +
         </button>
     </body>
+
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
+        integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    ></script>
+
+    <script type="module" src="./js/incremental.js"></script>
 </html>
