feat: fix views

--- a/views/increase_people.html
+++ b/views/increase_people.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style/style.css" />
         <title>Document</title>
     </head>
     <body
@@ -17,25 +18,7 @@
         "
     >
         <h1 align="center">TAMBAH ORANG</h1>
-        <button
-            id="add-count-btn"
-            style="
-                display: inline-block;
-                margin-top: 20px;
-                width: 30%;
-                border: none;
-                padding-bottom: 5px;
-                box-shadow: 2px 2px rgba(0, 0, 0, 0.12);
-                background-color: #a86cc5;
-                color: #ffffff;
-                border-radius: 20px;
-                margin-left: 35%;
-                font-size: 30px;
-                font-weight: 600;
-            "
-        >
-            +
-        </button>
+        <button class="tombol" id="add-count-btn">+</button>
     </body>
 
     <script
