--- a/views/people_counter.html
+++ b/views/people_counter.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
         <title>Document</title>
     </head>
     <body
@@ -17,8 +16,8 @@
             padding: 10px;
         "
     >
-        <h1 align="center">TAMBAH ORANG</h1>
-        <button class="tombol" id="add-count-btn">+</button>
+        <h1 align="center">Jumlah Orang</h1>
+        <h1 id="counter" align="center">0</h1>
     </body>
 
     <script
@@ -28,5 +27,5 @@
         referrerpolicy="no-referrer"
     ></script>
 
-    <script type="module" src="./js/incremental.js"></script>
+    <script type="module" src="./js/counting.js"></script>
 </html>
